--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for @person, html: {class: "form-horizontal"} do |f| %>
 
-<%= render "shared/error", collection: @person %>
+<%= render partial: "shared/error", locals: {collection: @person} %>
+<%=# render: "shared/error", collection: @person also works %>
 
   <div class="form-group">
     <%= f.label :first_name, class: "control-label col-sm-2" %>
